--- a/ExceptionsDebuggingAndTesting/SPBMetro/Readme
+++ b/ExceptionsDebuggingAndTesting/SPBMetro/Readme
@@ -5,4 +5,8 @@
 Сформируйте схему метро (StationIndex) в тестовом классе, в которой можно построить хотя бы один маршрут с двумя пересадками. Делайте небольшую схему, чтобы легче ориентироваться в ней.
 Чтобы протестировать приватные методы класса RouteCalculator, используйте различные аргументы метода getShortestRoute() для вызова методов без пересадок, с одной и двумя пересадками.
 Code Coverage — инструмент в IDEA, определяющий уровень покрытия тестами классов, методов и строк. Чтобы запустить тесты с проверкой покрытия, надо нажать правой кнопкой мыши по классу директории с тестами и выбрать Run All tests with Coverage. Желательно добиться 100%-ного покрытия методов класса RouteCalculator.
-Критерии оценки
+
+Сделайте три отдельных лога в папке logs проекта SPBMetro с помощью log4j2:
+logs/search.log — заполнять информацией о станциях, которые ищут (существующие станции);
+logs/input_errors.log — заполнять информацией об ошибочном вводе (несуществующие станции);
+logs/exceptions.log — вносить в лог информацию об исключениях (Exception).
