--- a/ObjectsAndMethods/ArithmeticAndBasket/Readme
+++ b/ObjectsAndMethods/ArithmeticAndBasket/Readme
@@ -31,3 +31,23 @@ public double getTotalWeight()
 Имена методов соответствуют действиям, которые они выполняют.
 Имена переменных соответствуют хранимым в них данным.
 Все методы классов работают без ошибок, код компилируется.
+
+Задание 3
+Цель
+
+Опробовать принципы работы статических переменных и методов.
+Научиться самостоятельно создавать статические переменные и реализовывать в классах статические методы.
+
+Что нужно сделать
+Внесите следующие изменения в класс Basket:
+Добавьте две статические переменные для хранения общей стоимости и общего количества всех товаров во всех корзинах.
+Реализуйте статические методы, которые будут увеличивать значения этих переменных при добавлении в корзину новых товаров.
+Реализуйте статический метод расчёта средней цены товара во всех корзинах. Он должен рассчитывать и возвращать отношение общей стоимости всех корзин к общему количеству всех товаров.
+Реализуйте статический метод расчёта средней стоимости корзины (отношение общей стоимости всех корзин к количеству корзин).
+Названия и типы переменных, а также названия и методов придумайте самостоятельно.
+
+Критерии оценки работы
+Выполнены все указанные в задании требования: созданы обе переменные и реализованы все методы.
+Имена переменных соответствуют хранимым в них данным.
+Имена методов соответствуют выполняемым действиям.
+Все методы работают без ошибок, код компилируется.
